# dsp-cat

./: Cargo.toml  README.md
.github/workflows/: docs.yml
benches/: fir_pipeline.rs
src/: error.rs  lib.rs
src/composition/: cascade.rs  mod.rs  parallel.rs
src/golden/: accumulator.rs  cic.rs  decimator.rs  delay.rs  fir.rs  gain.rs  interpolator.rs  mod.rs  pipeline.rs
src/graph/: cic_graph.rs  fir_graph.rs  mod.rs  pipeline_graph.rs
src/hdl/: accumulator.rs  cic.rs  common.rs  decimator.rs  delay.rs  fir.rs  gain.rs  interpolator.rs  mod.rs  pipeline.rs  raw.rs
src/hdl/cic/: cic_filter.rs  comb.rs  integrator.rs  mod.rs
src/hdl/fir/: fir_filter.rs  mac.rs  mod.rs  tap_chain.rs
src/interpret/: descriptor.rs  mod.rs  morphism.rs  signal.rs
src/sample/: element.rs  format.rs  mod.rs
src/sim/: mod.rs  runner.rs
tests/: end_to_end.rs  pipeline_composition.rs
